@@ -8,7 +8,7 @@ This program can be distributed under the terms of the GNU GPLv3.
 
 from __future__ import division, print_function
 from _common import TestCase
-from s3ql.backends import local, s3
+from s3ql.backends import local, s3, s3s, gs, gss
 from s3ql.backends.common import (ChecksumError, ObjectNotEncrypted, NoSuchObject, 
     BetterBucket)
 import ConfigParser
@@ -19,7 +19,7 @@ import time
 import unittest2 as unittest
      
 class BackendTestsMixin(object):
-
+        
     def newname(self):
         self.name_cnt += 1
         # Include special characters
@@ -88,13 +88,17 @@ class BackendTestsMixin(object):
         self.assertFalse(key in self.bucket)
 
     def test_clear(self):
-        self.bucket[self.newname()] = self.newname()
-        self.bucket[self.newname()] = self.newname()
+        key1 = self.newname()
+        key2 = self.newname()
+        self.bucket[key1] = self.newname()
+        self.bucket[key2] = self.newname()
 
         time.sleep(self.delay)
         self.assertEquals(len(list(self.bucket)), 2)
         self.bucket.clear()
         time.sleep(self.delay)
+        self.assertTrue(key1 not in self.bucket)
+        self.assertTrue(key2 not in self.bucket)        
         self.assertEquals(len(list(self.bucket)), 0)
 
     def test_list(self):
@@ -143,12 +147,11 @@ class BackendTestsMixin(object):
 #@unittest.skip('takes too long')
 class S3Tests(BackendTestsMixin, TestCase):
     def setUp(self):
-        self.name_cnt = 0
-
+        self.name_cnt = 0        
         # This is the time in which we expect S3 changes to propagate. It may
         # be much longer for larger objects, but for tests this is usually enough.
-        self.delay = 8
-       
+        self.delay = 15
+
         self.bucket = s3.Bucket(*self.get_credentials('s3-test'))
 
     def tearDown(self):
@@ -171,11 +174,39 @@ class S3Tests(BackendTestsMixin, TestCase):
             bucket_name = config.get(name, 'test-bucket')
             backend_login = config.get(name, 'backend-login')
             backend_password = config.get(name, 'backend-password')
-        except ConfigParser.NoOptionError:
+        except (ConfigParser.NoOptionError, ConfigParser.NoSectionError):
             self.skipTest("Authentication file does not have test section")  
     
         return (bucket_name, backend_login, backend_password)
     
+    
+class S3STests(S3Tests):
+    def setUp(self):
+        self.name_cnt = 0        
+        # This is the time in which we expect S3 changes to propagate. It may
+        # be much longer for larger objects, but for tests this is usually enough.
+        self.delay = 15
+       
+        self.bucket = s3s.Bucket(*self.get_credentials('s3-test'))    
+
+class GSTests(S3Tests):
+    def setUp(self):
+        self.name_cnt = 0        
+        # This is the time in which we expect S3 changes to propagate. It may
+        # be much longer for larger objects, but for tests this is usually enough.
+        self.delay = 15
+       
+        self.bucket = gs.Bucket(*self.get_credentials('gs-test')) 
+        
+class GSSTests(S3Tests):
+    def setUp(self):
+        self.name_cnt = 0        
+        # This is the time in which we expect S3 changes to propagate. It may
+        # be much longer for larger objects, but for tests this is usually enough.
+        self.delay = 15
+       
+        self.bucket = gss.Bucket(*self.get_credentials('gs-test')) 
+                        
 class LocalTests(BackendTestsMixin, TestCase):
 
     def setUp(self):
